@@ -870,6 +870,16 @@ make check >> nco.make.foo 2>&1
 make install >> nco.make.foo 2>&1
 scp nco.configure.foo nco.config.log.foo nco.libtool.foo nco.make.foo dust.ess.uci.edu:Sites/nco/rgr
 
+# gcc/g++ Zender uses this to debug NCO with system netCDF binaries with clang (frazil)
+cd ~/nco;/bin/rm -f *.foo;make distclean
+CC='clang' CFLAGS='-Wall -DNCO_ABORT_ON_ERROR' CXX='clang -std=c++11' CXXFLAGS='-Wall' NETCDF_INC='/usr/include' NETCDF_LIB='/usr/lib64' ./configure --enable-debug-symbols --prefix=${HOME} --bindir=${MY_BIN_DIR} --datadir=${HOME}/nco/data --libdir=${MY_LIB_DIR} --mandir=${HOME}/nco/man > nco.configure.foo 2>&1
+/bin/cp -f config.log nco.config.log.foo
+/bin/cp -f libtool nco.libtool.foo
+make clean;make > nco.make.foo 2>&1
+make check >> nco.make.foo 2>&1
+make install >> nco.make.foo 2>&1
+scp nco.configure.foo nco.config.log.foo nco.libtool.foo nco.make.foo dust.ess.uci.edu:Sites/nco/rgr
+
 # g++/g++ Zender uses this to compile NCO with _g++_ (not recommended for normal use)
 cd ~/nco;/bin/rm -f *.foo;make distclean
 CC='g++' CFLAGS='-Wall -DNCO_ABORT_ON_ERROR' CXX='g++' CXXFLAGS='-Wall' NETCDF_INC="${HOME}/anaconda/include" NETCDF_LIB="${HOME}/anaconda/lib" ./configure --enable-ccr --enable-debug-symbols --prefix=${HOME} --bindir=${MY_BIN_DIR} --datadir=${HOME}/nco/data --libdir=${MY_LIB_DIR} --mandir=${HOME}/nco/man > nco.configure.foo 2>&1
